--- a/templates/statsite_install.j2
+++ b/templates/statsite_install.j2
@@ -16,8 +16,8 @@ scons
 mv statsite {{statsite_binary_path}}
 
 # Rsync sinks
-rsync -av ./sinks {{statsite_etc_sinks}}
-chown {{statsite_group}}:{{statsite_user}} {{statsite_etc_sinks}}
+sudo rsync -av sinks {{statsite_etc_sinks}}
+sudo chown {{statsite_group}}:{{statsite_user}} {{statsite_etc_sinks}}
 
 popd # pop statsite-{{statsite_version}}
 popd # pop /tmp
