Add config variables to config file

--- a/templates/statsite_config.conf.j2
+++ b/templates/statsite_config.conf.j2
@@ -1,15 +1,15 @@
 [statsite]
-port=8125
-udp_port=8125
-log_level=INFO
-flush_interval=10
-timer_eps=0.01
-set_eps=0.02
-stream_cmd={{statsite_stream_cmd}}
-daemonize={{statsite_daemonize}}
+port={{ statsite_port}}
+udp_port={{ statsite_udp_port }}
+log_level={{ statsite_log_level }}
+flush_interval={{ statsite_flush_interval }}
+timer_eps={{ statsite_timer_eps }}
+set_eps={{ statsite_set_eps }}
+stream_cmd={{ statsite_stream_cmd }}
+daemonize={{ statsite_daemonize }}
 {% if statsite_binary_stream %}
 binary_stream=yes
 {% endif %}
 {% if statsite_daemonize == 1 %}
-pid_file={{statsite_pidfile}}
+pid_file={{ statsite_pidfile }}
 {% endif %}
