Ansible jinja variable styling

--- a/templates/statsite_install.j2
+++ b/templates/statsite_install.j2
@@ -7,19 +7,19 @@ set -e
 
 pushd /tmp > /dev/null
 # Get statsite and un-package archive
-wget {{statsite_package_url}}
-tar xfvz v{{statsite_version}}.tar.gz
+wget {{ statsite_package_url }}
+tar xfvz v{{ statsite_version }}.tar.gz
 
 # Change into statsite archive and build binary
-pushd statsite-{{statsite_version}} > /dev/null
+pushd statsite-{{ statsite_version }} > /dev/null
 scons
-mv statsite {{statsite_binary_path}}
+mv statsite {{ statsite_binary_path }}
 
 # Rsync sinks
-sudo rsync -av sinks {{statsite_etc_sinks}}
-sudo chown {{statsite_group}}:{{statsite_user}} {{statsite_etc_sinks}}
+sudo rsync -av ./sinks {{ statsite_etc_sinks }}
+sudo chown {{ statsite_group }}:{{ statsite_user }} {{ statsite_etc_sinks }}
 
-popd # pop statsite-{{statsite_version}}
+popd # pop statsite-{{ statsite_version }}
 popd # pop /tmp
 
 # vim: ft=sh:
