--- a/templates/statsite_install.j2
+++ b/templates/statsite_install.j2
@@ -13,10 +13,12 @@ tar xfvz v{{ statsite_version }}.tar.gz
 # Change into statsite archive and build binary
 pushd statsite-{{ statsite_version }} > /dev/null
 scons
-mv statsite {{ statsite_binary_path }}
+mv -f statsite {{ statsite_binary_path }}
+
+mkdir -p {{ statsite_etc_dir }}
 
 # Rsync sinks
-sudo rsync -av ./sinks {{ statsite_etc_sinks }}
+sudo rsync -av sinks {{ statsite_etc_sinks }}
 sudo chown {{ statsite_group }}:{{ statsite_user }} {{ statsite_etc_sinks }}
 
 popd # pop statsite-{{ statsite_version }}
